# Notes

./: .gitignore  ARM Linux 内核编译.md  Git学习笔记.md  Gradle 学习笔记.md  Java 学习笔记.md  MASM汇编学习笔记.md  README.md  The Computer for the 21st Century.md  Writing perfect papers.md  好词好句.md  小书匠语法使用手册.md  数模学习计划.md  数论(Number Theory).md  深度学习(Deep Learning).md  离散数学作业.md  笔记.md  算法 Algorithm.md  编译原理学习笔记.md
Cpp/: README.md  StringVectorArray.cpp  Variables  Variables.cpp  header.h
DeepLearning/: 5.7 Supervised Learning.ipynb  A Neural Algorithm of Artistic Style.ipynb  Convolutional Networks.ipynb  Deep Feedforward Network.ipynb  GNN.md  Gaussian Distribution.ipynb  Linear Algebra.ipynb  Linear Regression.ipynb  ML Basis.ipynb  Matrix Calculus.ipynb  MatrixCalculus.ipynb  Numerical Computation.ipynb  Probability Theory.ipynb  README.md  Support Vector Machine.ipynb  variational-inference.ipynb  深度学习(Deep Learning).md  深度学习(Deep Learning)Fix.md  贝叶斯线性回归.ipynb
MIT_6824/: lec1.md
Misc/: ARM Linux 内核编译.md  Git学习笔记.md  Gradle 学习笔记.md  Java 学习笔记.md  MASM汇编学习笔记.md  剑指 Offer.md  编译原理学习笔记.md
Python/: .hello.py.swp  .vimrc  FuncClass.py  GUINetworkThread.py  IntroBasic.py  ModuleExceptionIO.py  README.md  WebDatabaseEmail.py  hello.py
THU/: BigDataAnalysis.tex  NLP.aux  NLP.tex  NumericalAnalysis.aux  NumericalAnalysis.tex  SpeechProcessing.aux  SpeechProcessing.tex  StochasticProcesses.aux  courseml.aux  (+11 more)
THU/hw/crypto/: Cargo.toml
THU/hw/crypto/src/: aes.rs  client.rs  main.rs  rsa.rs  server.rs  socks5.rs
THU/hw/crypto/src/client/: socks5.rs
THU/hw/crypto/src/rsa/: primes.rs
(+176 files in other folders)
