[package]
name = "crypto"
version = "0.1.0"
authors = ["DCMMC <xwt97294597@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.12"
rand = "0.8.0"
async-std = "1.9.0"
futures = "0.3.8"
bytes = "~0.5"
clap = "~2.33"
lazy_static = "~1.4.0"
log = "~0.4"
env_logger = "0.7.1"
chrono = "0.3"
