[package]
name = "crypto"
version = "0.1.0"
authors = ["DCMMC <xwt97294597@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.12"
rand = "0.8.0"
async-std = "1.9.0"
futures = "0.3.8"
bytes = "~0.5"
clap = "3.0.0-beta.2"
lazy_static = "~1.4.0"
log = "~0.4"
env_logger = "0.7.1"
chrono = "0.3"
pin-project-lite = "0.2.6"
futures-core = "0.3.14"
sha3 = "0.9.1"
hex = "0.3.0"
